--- a/src/app/components/sections/reviews-slider/reviews-slider.css
+++ b/src/app/components/sections/reviews-slider/reviews-slider.css
@@ -1,9 +1,3 @@
-.mySwiper {
-  width: 100%;
-  padding: 2rem 0;
-}
-
-.swiper-button-prev,
-.swiper-button-next {
-  color: #333 !important;
+::ng-deep.p-carousel-viewport {
+  padding: 1rem 2rem;
 }
