--- a/src/app/pages/contacts/contacts.html
+++ b/src/app/pages/contacts/contacts.html
@@ -10,7 +10,7 @@
           <ul class="flex flex-col gap-6">
             @for (info of contactsInfo(); track $index) {
             <li>
-              <h4 class="text-2xl sm:text-3xl font-semibold">
+              <h4 class="text-2xl sm:text-3xl font-semibold capitalize">
                 {{ info.title }}
               </h4>
               <p class="text-lg sm:text-xl">{{ info.text }}</p>
