--- a/src/app/pages/services-detail/services-detail.html
+++ b/src/app/pages/services-detail/services-detail.html
@@ -4,7 +4,7 @@
     <h3 class="text-3xl sm:text-4xl font-bold capitalize">Servizi offerti</h3>
 
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 py-6 gap-6">
-      @for (service of services(); track $index) {
+      @for (service of orderedServices(); track $index) {
       <app-service-card
         [hasShadow]="true"
         class="bg-white w-full"
